[tool.poetry]
name = "litestar-upsert"
version = "0.1.0"
description = ""
authors = ["coronoro <streicher.tim@googlemail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
litestar = { extras = ["jwt", "structlog"], version = "*" }
litestar-granian = "^0.2.4"
python-dotenv = "^1.0.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
passlib = { extras = ["argon2"], version = "^1.7.4" }
toml = "^0.10.2"
tzdata = "^2024.1"
advanced-alchemy = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
